ANISOtime update